feat: Add X Account integration and improve UI responsiveness  - Add Sign X Account feature in Options and Sidepanel settings - Implement fully responsive design for all screen sizes (320px-600px+) - Include mint address (CA) in generated captions - Optimize spacing and typography throughout UI - Remove API Configuration section from settings - Reduce action icons size for cleaner interface - Improve card spacing and preview post layout
## Quick Copy - Detailed Description

```
This update introduces X (formerly Twitter) account integration and significantly improves the overall user experience with responsive design enhancements.

Key Features:
✨ X Account Integration - Connect your X/Twitter account directly from settings with real-time status indicators
📍 Mint Address in Captions - Automatically includes contract address (CA) when generating captions
📱 Fully Responsive - Optimized layouts for all screen sizes from 320px to 600px+
🎨 Compact UI - Reduced icon sizes and spacing for cleaner, more efficient interface
⚡ Better UX - Improved typography, spacing, and visual hierarchy across all components

Technical Improvements:
- Enhanced Chrome storage integration for account credentials
- Dynamic media queries for seamless adaptation
- Optimized component sizing and spacing
- Removed redundant API Configuration section
```

---

## [Unreleased] - 2026-02-01

### Added
- ✨ **Sign X Account Feature**: Added X (Twitter) account integration in both Options page and Sidepanel Settings
  - Username and password/API key input fields
  - Real-time connection status indicator with visual feedback
  - Expandable/collapsible section in sidepanel
  - Automatic storage in Chrome storage

- 🎯 **Enhanced Caption Generation**: Mint address (CA) now automatically included in generated captions
  - Format: `📍 CA: {mint_address}`
  - Positioned before hashtags for better visibility

### Changed
- 🎨 **Improved UI Responsiveness**: Fully responsive design across all screen sizes
  - Extr

--- a/src/sidepanel/sidepanel.html
+++ b/src/sidepanel/sidepanel.html
@@ -327,23 +327,6 @@
 
     <div class="settings-content">
       <div class="settings-section">
-        <h3 class="section-title">API Configuration</h3>
-        <div class="setting-item clickable" id="keycode-toggle">
-          <div class="setting-info">
-            <label class="setting-label">KeyCode</label>
-            <p class="setting-description">Enter your API key to access premium features</p>
-          </div>
-          <svg class="chevron-icon" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
-          </svg>
-        </div>
-        <div id="keycode-content" class="keycode-content" style="display: none;">
-          <input type="password" id="keycode-input" class="keycode-input" placeholder="Enter your KeyCode">
-          <button id="save-keycode-btn" class="save-btn">Save KeyCode</button>
-        </div>
-      </div>
-
-      <div class="settings-section">
         <h3 class="section-title">Account</h3>
         <div class="setting-item clickable" id="subscription-item">
           <div class="setting-info">
@@ -360,6 +343,30 @@
             <p class="setting-description">Available credits for AI generation</p>
           </div>
           <span class="credit-badge">0</span>
+        </div>
+      </div>
+
+      <div class="settings-section">
+        <h3 class="section-title">X Account</h3>
+        <div class="setting-item clickable" id="x-account-toggle">
+          <div class="setting-info">
+            <label class="setting-label">Sign X Account</label>
+            <p class="setting-description">Connect your X (Twitter) account</p>
+          </div>
+          <svg class="chevron-icon" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+          </svg>
+        </div>
+        <div id="x-account-content" class="keycode-content" style="display: none;">
+          <input type="text" id="x-username-input" class="keycode-input" placeholder="@username">
+          <input type="password" id="x-password-input" class="keycode-input" placeholder="Password (optional)">
+          <div class="x-status-container">
+            <div class="x-status" id="x-status">
+              <span class="x-status-dot"></span>
+              <span class="x-status-text">Not connected</span>
+            </div>
+          </div>
+          <button id="connect-x-btn" class="save-btn">Connect Account</button>
         </div>
       </div>
 
