Make sticky footer fixed and unify styles
Move the sticky footer out of the scrollable content in sidepanel.html (remove an extra closing div and add a clear comment). Update sidepanel.css to stop using position:sticky and instead treat the footer as a non-shrinking flex item with a consistent 56px height, horizontal padding, centered content, box-sizing, and unified padding across breakpoints. These changes keep the CTA footer fixed at the bottom of the panel and normalize its sizing and layout across viewports.

--- a/src/sidepanel/sidepanel.html
+++ b/src/sidepanel/sidepanel.html
@@ -755,8 +755,6 @@
       </div>
 
       </div>
-
-      </div>
       <!-- End KOL Tab Content -->
 
       <!-- Signal Tab Content (Trade Mode) -->
@@ -876,7 +874,10 @@
       </div>
       <!-- end main-panes-wrapper -->
 
-    <!-- Sticky Footer CTA -->
+    </div>
+    <!-- end scroll-content -->
+
+    <!-- Sticky Footer CTA: fixed at bottom of panel -->
     <div class="sticky-footer">
       <button class="post-btn post-btn-x" id="post-x-btn" title="Post on X">
         <svg width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
